# r2s

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  package.xml  pyproject.toml  setup.py
.github/workflows/: black_format.yml
r2s/: cli.py  main.py  main2.py  ui.py  ui.tcss  watcher.py
r2s/modals/: help_modal.py
r2s/screens/: main_screen.py
r2s/screens/colcon/: header.py  log.py  package_list.py
r2s/screens/ros2/: actions.py  get_node.py  header.py  interfaces.py  lifecycle_nodes.py  nodes.py  params.py  services.py  topics.py
r2s/widgets/: __init__.py  find_dialog.py
r2s/widgets/data_grid/: __init__.py
r2s/widgets/header/: __init__.py
r2s/widgets/log_view/: __init__.py  find_dialog.py  log_lines.py  log_source.py  log_view.py  messages.py
src/r2s/: watcher.py
src/r2s/modals/: __init__.py  help_modal.py
src/r2s/screens/: main_screen.py
src/r2s/screens/colcon/: package_list.py
src/r2s/screens/ros2/: get_node.py  nodes.py
