<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2s</name>
  <version>0.0.1</version>
  <description>
    Terminal User Interface for ROS 2 command line tools.
  </description>

  <maintainer email="mjcarroll@intrinsic.ai">Michael Carroll</maintainer>
  <maintainer email="jennuine@intrinsic.ai">Jenn Nguyen</maintainer>

  <license>Apache License 2.0</license>

  <author email="mjcarroll@intrinsic.ai">Michael Carroll</author>
  <author email="jennuine@intrinsic.ai">Jenn Nguyen</author>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-timeout</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
